--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
 
 <section id="contact">
   <h2>Get In Touch</h2>
-  <form action="https://formspree.io/f/YOUR_FORMSPREE_ID" method="POST" class="contact-form">
+  <form name="contact" method="POST" data-netlify="true" class="contact-form">
+    <input type="hidden" name="form-name" value="contact" />
     <input type="text" name="name" placeholder="Your Name" required />
-    <input type="email" name="_replyto" placeholder="Your Email" required />
+    <input type="email" name="email" placeholder="Your Email" required />
     <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
     <button type="submit" class="btn">Send Message</button>
   </form>
